--- a/os_emu_vs/os_emu_vs.vcxproj
+++ b/os_emu_vs/os_emu_vs.vcxproj
@@ -143,7 +143,7 @@
     <ClInclude Include="os_emu_vs.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="Screen.h" />
-    <ClInclude Include="util.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
