--- a/os_emu_vs/os_emu_vs.vcxproj
+++ b/os_emu_vs/os_emu_vs.vcxproj
@@ -135,15 +135,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AConsole.cpp" />
+    <ClCompile Include="BaseScreen.cpp" />
+    <ClCompile Include="ConsoleManager.cpp" />
+    <ClCompile Include="MainConsole.cpp" />
     <ClCompile Include="os_emu_vs.cpp" />
+    <ClCompile Include="os_emu_vs.txt" />
     <ClCompile Include="Process.cpp" />
-    <ClCompile Include="Screen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AConsole.h" />
+    <ClInclude Include="BaseScreen.h" />
+    <ClInclude Include="ConsoleManager.h" />
+    <ClInclude Include="MainConsole.h" />
     <ClInclude Include="os_emu_vs.h" />
     <ClInclude Include="Process.h" />
-    <ClInclude Include="Screen.h" />
-    <ClInclude Include="Util.h" />
+    <ClInclude Include="TypedefRepo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
