--- a/OSEmulator.vcxproj
+++ b/OSEmulator.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="src\ConsoleManager.h" />
     <ClInclude Include="src\MainConsole.h" />
     <ClInclude Include="src\Marquee.h" />
+    <ClInclude Include="src\MarqueeNT.h" />
     <ClInclude Include="src\Process.h" />
     <ClInclude Include="src\Screen.h" />
   </ItemGroup>
@@ -141,6 +142,7 @@
     <ClCompile Include="src\ConsoleManager.cpp" />
     <ClCompile Include="src\MainConsole.cpp" />
     <ClCompile Include="src\Marquee.cpp" />
+    <ClCompile Include="src\MarqueeNT.cpp" />
     <ClCompile Include="src\OSEmulator.cpp" />
     <ClCompile Include="src\Process.cpp" />
     <ClCompile Include="src\Screen.cpp" />
