--- a/OSEmulator.vcxproj
+++ b/OSEmulator.vcxproj
@@ -130,21 +130,26 @@
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Command.h" />
     <ClInclude Include="src\Console.h" />
     <ClInclude Include="src\ConsoleManager.h" />
     <ClInclude Include="src\MainConsole.h" />
     <ClInclude Include="src\Marquee.h" />
     <ClInclude Include="src\MarqueeNT.h" />
     <ClInclude Include="src\Process.h" />
+    <ClInclude Include="src\Scheduler.h" />
+    <ClInclude Include="src\SchedulerFCFS.h" />
     <ClInclude Include="src\Screen.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Command.cpp" />
     <ClCompile Include="src\ConsoleManager.cpp" />
     <ClCompile Include="src\MainConsole.cpp" />
     <ClCompile Include="src\Marquee.cpp" />
     <ClCompile Include="src\MarqueeNT.cpp" />
     <ClCompile Include="src\OSEmulator.cpp" />
     <ClCompile Include="src\Process.cpp" />
+    <ClCompile Include="src\SchedulerFCFS.cpp" />
     <ClCompile Include="src\Screen.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
