--- a/os_emu_vs/os_emu_vs.vcxproj
+++ b/os_emu_vs/os_emu_vs.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="BaseScreen.cpp" />
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="FCFSScheduler.cpp" />
+    <ClCompile Include="GlobalConfig.cpp" />
     <ClCompile Include="GlobalScheduler.cpp" />
     <ClCompile Include="IETThread.cpp" />
     <ClCompile Include="MainConsole.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="BaseScreen.h" />
     <ClInclude Include="ConsoleManager.h" />
     <ClInclude Include="FCFSScheduler.h" />
+    <ClInclude Include="GlobalConfig.h" />
     <ClInclude Include="GlobalScheduler.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IETThread.h" />
