--- a/os_emu_vs/os_emu_vs.vcxproj.filters
+++ b/os_emu_vs/os_emu_vs.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="RRScheduler.cpp">
       <Filter>Scheduling</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalConfig.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ICommand.h">
@@ -119,6 +122,9 @@
     </ClInclude>
     <ClInclude Include="RRScheduler.h">
       <Filter>Scheduling</Filter>
+    </ClInclude>
+    <ClInclude Include="GlobalConfig.h">
+      <Filter>Util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
