feat: SchedulerRR implementation, updated commands, removed unused classes

--- a/OSEmulator.vcxproj.filters
+++ b/OSEmulator.vcxproj.filters
@@ -27,16 +27,10 @@
     <ClInclude Include="src\MainConsole.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Marquee.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Process.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Screen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MarqueeNT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Command.h">
@@ -48,15 +42,21 @@
     <ClInclude Include="src\SchedulerFCFS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\PrintCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SchedulerRR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ConsoleManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\MainConsole.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Marquee.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\OSEmulator.cpp">
@@ -68,13 +68,16 @@
     <ClCompile Include="src\Screen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\MarqueeNT.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Command.cpp">
+    <ClCompile Include="src\PrintCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\SchedulerFCFS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SchedulerRR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
