--- a/OSEmulator.vcxproj
+++ b/OSEmulator.vcxproj
@@ -70,6 +70,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <SourcePath>$(ProjectDir)\src;$(VC_SourcePath)</SourcePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <SourcePath>$(ProjectDir)\src;$(VC_SourcePath)</SourcePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -131,25 +137,26 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Command.h" />
+    <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Console.h" />
     <ClInclude Include="src\ConsoleManager.h" />
     <ClInclude Include="src\MainConsole.h" />
-    <ClInclude Include="src\Marquee.h" />
-    <ClInclude Include="src\MarqueeNT.h" />
+    <ClInclude Include="src\PrintCommand.h" />
     <ClInclude Include="src\Process.h" />
     <ClInclude Include="src\Scheduler.h" />
     <ClInclude Include="src\SchedulerFCFS.h" />
+    <ClInclude Include="src\SchedulerRR.h" />
     <ClInclude Include="src\Screen.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Command.cpp" />
+    <ClCompile Include="src\Config.cpp" />
+    <ClCompile Include="src\PrintCommand.cpp" />
     <ClCompile Include="src\ConsoleManager.cpp" />
     <ClCompile Include="src\MainConsole.cpp" />
-    <ClCompile Include="src\Marquee.cpp" />
-    <ClCompile Include="src\MarqueeNT.cpp" />
     <ClCompile Include="src\OSEmulator.cpp" />
     <ClCompile Include="src\Process.cpp" />
     <ClCompile Include="src\SchedulerFCFS.cpp" />
+    <ClCompile Include="src\SchedulerRR.cpp" />
     <ClCompile Include="src\Screen.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
