--- a/os_emu_vs/os_emu_vs.vcxproj
+++ b/os_emu_vs/os_emu_vs.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="GlobalScheduler.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IETThread.h" />
+    <ClInclude Include="IMemoryAllocator.h" />
     <ClInclude Include="MainConsole.h" />
     <ClInclude Include="MarqueeConsole.h" />
     <ClInclude Include="os_emu_vs.h" />
