--- a/OSEmulator.vcxproj.filters
+++ b/OSEmulator.vcxproj.filters
@@ -77,16 +77,16 @@
     <ClCompile Include="src\PrintCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\SchedulerFCFS.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\SchedulerRR.cpp">
+    <ClCompile Include="src\MemoryManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\MemoryManager.cpp">
+    <ClCompile Include="src\SchedulerFirstComeFirstServe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SchedulerRoundRobin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
